--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,16 @@
   box-sizing: border-box;
 }
 
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  block-size: 100%;
+}
+
+
 body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
