--- a/styles/light.css
+++ b/styles/light.css
@@ -2,7 +2,7 @@
   --title-color: #ffc2e6;
   --background-color: #fff1f7;
   --navigagtion-text-color: #353430;
-  --nav-outline: 1px solid #353430;
+  --nav-outline: rgba(53, 52, 48, 0.4);
   --accent-color: #ff8dcb;
   --accent-text-color: #353430;
   --subtitle-color: #353430;
@@ -17,7 +17,7 @@
       --title-color: #ffc2e6;
       --background-color: #fff1f7;
       --navigagtion-text-color: #353430;
-      --nav-outline: 1px solid #353430;
+      --nav-outline: rgba(53, 52, 48, 0.4);
       --accent-color: #ff8dcb;
       --accent-text-color: #353430;
       --subtitle-color: #353430;
