--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,4 +11,5 @@
   --subtitle-color:#FF0070;
   --main-text-color: #F1B2CE;
   --decoration-color: #353430;
+  --nav-outline: rgba(255, 0, 112, 0.4);
 } 
