--- a/styles/style.css
+++ b/styles/style.css
@@ -409,7 +409,6 @@ main {
 @media (min-width: 768px) {
     .how-to-block {
         display: grid;
-        .how-to-block 
         grid-template-rows: auto-fill;
         margin: 77px 0 0 0;
       gap: 20px;
@@ -418,7 +417,9 @@ main {
     .how-to-block .subtitle {
         grid-column: 1;
         margin: 0;
+        width: 236px;
     }
+
     .how-to-block .note {
         grid-column: 2;
     }
@@ -431,15 +432,12 @@ main {
         margin-block-start: 75px;
     }
 
-    .how-to-block .main-text {
-        width: 650px;
-    }
 
-    .how-to-block .item-heading {
-        margin: 20px 0 10px 0;
-    }
+
+    .how-to-block .subtitle {
+ width: 315px;
 }
-
+}
 .section__image {
     width: 100%;
     height: 100%;
@@ -456,14 +454,13 @@ main {
     font-size: 18px;
     line-height: 23.4px;
     font-weight: 700;
-    margin: 50px 0 10px 0;
+grid-row: 1;
+grid-column: 1;
 }
 
 .pictures {
     display: grid;
     grid-template-rows: repeat(5, auto);
-
-    margin: 10px 0 0 0;
     gap: 10px;
 }
 
