--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,7 @@ html {
     background-position: center;
     background-attachment: fixed;
     width: 100%;
+
 }
 
 button {
@@ -55,6 +56,7 @@ button {
     min-height: 668px;
     padding: 0;
     margin-block-start: 10px;
+    padding-bottom: 10px; /* отступ */
 }
 
 @media (min-width: 768px) {
@@ -97,7 +99,7 @@ button {
     justify-self: start;
     align-self: end;
     margin-left: 10px;
-    margin-top: ;
+    margin-bottom: 40px; /*отступ*/
     grid-row: 3;
 }
 
@@ -220,14 +222,15 @@ button {
 }
 
 .heading-tittle {
+
     color: var(--title-color);
     font-family: IBM Plex Mono, Arial, sans-serif;
     font-weight: 700;
     line-height: 96px;
     text-align: left;
     text-shadow: 4px 4px 0 var(--accent-color);
-    padding: 0;
     grid-row: 2;
+
 }
 
 @media (min-width: 375px) {
@@ -245,9 +248,6 @@ button {
 @media (min-width: 1024px) {
     .heading-tittle {
         text-shadow: 4px 4px 0 #ff0070;
-    }
-
-    .heading-tittle {
         font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     }
 }
