--- a/styles/style.css
+++ b/styles/style.css
@@ -53,10 +53,10 @@ button {
     grid-template-rows: 1fr min-content 1fr;
     width: 100%;
     height: 100vh;
-    min-height: 668px;
+    min-height: 658px;
     padding: 0;
     margin-block-start: 10px;
-    padding-bottom: 10px; /* отступ */
+    margin-bottom: 10px; /* отступ */
 }
 
 @media (min-width: 768px) {
@@ -68,7 +68,7 @@ button {
 
 @media (min-width: 1024px) {
     .header {
-        min-height: 768px;
+        min-height: 728px;
     }
 }
 
@@ -99,13 +99,14 @@ button {
     justify-self: start;
     align-self: end;
     margin-left: 10px;
-    margin-bottom: 40px; /*отступ*/
+
     grid-row: 3;
 }
 
 @media (min-width: 768px) {
     .decorated-zone::before {
         margin-left: 20px;
+        margin-bottom: 10px;
     }
 
     .decorated-zone::after {
