--- a/styles/style.css
+++ b/styles/style.css
@@ -53,22 +53,23 @@ button {
     grid-template-rows: 1fr min-content 1fr;
     width: 100%;
     height: 100vh;
-    min-height: 658px;
+    min-height: 668px;
     padding: 0;
     margin-block-start: 10px;
-    margin-bottom: 10px; /* отступ */
+    padding-bottom: 10px; /* отступ */
 }
 
 @media (min-width: 768px) {
     .header {
         min-height: 1024px;
         margin-block-start: 20px;
+        padding-bottom: 10px;
     }
 }
 
 @media (min-width: 1024px) {
     .header {
-        min-height: 728px;
+        min-height: 768px;
     }
 }
 
@@ -99,14 +100,14 @@ button {
     justify-self: start;
     align-self: end;
     margin-left: 10px;
-
+    margin-bottom: 30px; /*тступ*/
     grid-row: 3;
 }
 
 @media (min-width: 768px) {
     .decorated-zone::before {
         margin-left: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 50px; /*тступ*/
     }
 
     .decorated-zone::after {
