--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ button {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr min-content 1fr;
     width: 100%;
-    height: 100vh;
+    /*height: 100vh;*/
     min-height: 668px;
     padding: 0;
     padding-block-start: 10px;
@@ -151,6 +151,7 @@ button {
     grid-row: 1;
     grid-column: 1;
     margin-right: 10px;
+    min-height: 99px;
 }
 
 .header__theme-menu-list {
@@ -231,6 +232,7 @@ button {
     text-align: left;
     text-shadow: 4px 4px 0 var(--accent-color);
     grid-row: 2;
+    padding-left: 10px;
 
 }
 
@@ -243,6 +245,7 @@ button {
 @media (min-width: 768px) {
     .heading-tittle {
         font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+        padding-left: 0;
     }
 }
 
@@ -264,6 +267,7 @@ button {
     justify-self: end;
     align-self: center;
     margin-right: 10px;
+    margin-bottom: 10px;
     grid-row: 3;
 }
 
