--- a/styles/style.css
+++ b/styles/style.css
@@ -281,6 +281,7 @@ button {
 @media (min-width: 1024px) {
     .introduction {
         width: 491px;
+        margin-block-end:  28px;
     }
 }
 
@@ -379,12 +380,12 @@ main {
 
 @media (min-width: 1024px) {
     main {
-        margin: 70px 20px 0 20px;
+        margin: 60px 20px 0 20px;
     }
+    .difficulties-block {
+    grid-template-columns: 315px auto;
+}
 
-    .difficulties-block .subtitle {
-        width: 315px;
-    }
 }
 
 @media (min-width: 768px) {
@@ -403,7 +404,10 @@ main {
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: auto auto;
         grid-template-rows: auto-fill;
-      /*  margin: 75px 0 0 0;*/
+    }
+
+    .concentration-reduction-block .note {
+        margin: 0;
     }
 
     .concentration-reduction-block .subtitle {
@@ -442,15 +446,10 @@ main {
 }
 
 @media (width >= 1024px) {
-    .how-to-block {
-        margin-block-start: 75px;
-    }
-
-
-
     .how-to-block .subtitle {
  width: 315px;
 }
+
 }
 .section__image {
     width: 100%;
@@ -470,7 +469,7 @@ main {
     font-weight: 700;
 grid-row: 1;
 grid-column: 1;
-margin-block-end: 20px;
+margin-block-end: 10px;
 }
 
 .pictures {
@@ -480,7 +479,10 @@ margin-block-end: 20px;
 }
 
 @media (width >= 768px) {
-    
+
+    .item-heading-pictures {
+        margin-block-end: 20px;
+    }
 
     .pictures {
         display: grid;
