--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ html {
     display: flex;
     height: auto;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
 }
 
 .page {
@@ -21,7 +21,6 @@ html {
     background-position: center;
     background-attachment: fixed;
     width: 100%;
-
 }
 
 button {
@@ -44,7 +43,7 @@ button {
 }
 
 .hyperlink:focus-visible {
-    outline: 1px solid var(--hyperlink-outline);
+    outline: 1px solid var(--main-text-color);
 }
 
 .header {
@@ -56,15 +55,12 @@ button {
     min-height: 668px;
     padding: 0;
     padding-block-start: 10px;
-
-
 }
 
 @media (min-width: 768px) {
     .header {
         min-height: 1024px;
         padding-block-start: 20px;
-    
     }
 }
 
@@ -101,14 +97,14 @@ button {
     justify-self: start;
     align-self: end;
     margin-left: 10px;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
     grid-row: 3;
 }
 
 @media (min-width: 768px) {
     .decorated-zone::before {
         margin-left: 20px;
-        margin-bottom: 20px; /*тступ*/
+        margin-bottom: 20px;
     }
 
     .decorated-zone::after {
@@ -166,8 +162,6 @@ button {
     padding: 0;
 }
 
-
-
 @media (min-width: 768px) {
     .header__theme-menu {
         margin-right: 20px;
@@ -222,7 +216,6 @@ button {
 }
 
 .heading-tittle {
-
     color: var(--title-color);
     font-family: IBM Plex Mono, Arial, sans-serif;
     font-weight: 700;
@@ -231,7 +224,6 @@ button {
     text-shadow: 4px 4px 0 var(--accent-color);
     grid-row: 2;
     padding-left: 10px;
-
 }
 
 @media (min-width: 375px) {
@@ -281,7 +273,7 @@ button {
 @media (min-width: 1024px) {
     .introduction {
         width: 491px;
-        margin-block-end:  28px;
+        margin-block-end: 28px;
     }
 }
 
@@ -291,7 +283,6 @@ button {
     font-size: 18px;
     line-height: 23.4px;
 }
-
 
 .how-to-block .subtitle {
     margin-block-end: 20px;
@@ -311,19 +302,18 @@ button {
     color: var(--accent-text-color);
     font-weight: 700;
     height: fit-content;
-
 }
 
 @media (min-width: 768px) {
     .advice-item-heading {
-       grid-row: 1;
-       grid-column: 2;
-       font-size: 18px;
+        grid-row: 1;
+        grid-column: 2;
+        font-size: 18px;
     }
     .sky {
         grid-row: 1;
         grid-column: 2;
-        padding-block-start: 40px;
+        padding-block-start: 42px;
     }
 }
 
@@ -349,9 +339,6 @@ main {
     gap: 10px;
 }
 
-
-
-
 @media (min-width: 768px) {
     main {
         margin: 60px 20px 0 20px;
@@ -373,9 +360,7 @@ main {
         grid-column: 1;
         grid-row: 1 / span 2;
         min-width: 236px;
-
     }
-
 }
 
 @media (min-width: 1024px) {
@@ -383,16 +368,13 @@ main {
         margin: 60px 20px 0 20px;
     }
     .difficulties-block {
-    grid-template-columns: 315px auto;
-}
-
+        grid-template-columns: 315px auto;
+    }
 }
 
 @media (min-width: 768px) {
-
     .concentration-reduction-block .subtitle {
         max-width: 236px;
-       
     }
 }
 
@@ -416,7 +398,6 @@ main {
     }
 }
 
-
 .normal-weight-heading {
     font-weight: 400;
     font-size: 18px;
@@ -428,7 +409,7 @@ main {
         display: grid;
         grid-template-rows: auto-fill;
 
-      gap: 20px;
+        gap: 20px;
     }
 
     .how-to-block .subtitle {
@@ -441,15 +422,12 @@ main {
         grid-column: 2;
         margin-block-start: 0;
     }
-
-
 }
 
-@media (width >= 1024px) {
+@media (min-width: 1024px) {
     .how-to-block .subtitle {
- width: 315px;
-}
-
+        width: 315px;
+    }
 }
 .section__image {
     width: 100%;
@@ -467,9 +445,9 @@ main {
     font-size: 18px;
     line-height: 23.4px;
     font-weight: 700;
-grid-row: 1;
-grid-column: 1;
-margin-block-end: 10px;
+    grid-row: 1;
+    grid-column: 1;
+    margin-block-end: 10px;
 }
 
 .pictures {
@@ -478,8 +456,7 @@ margin-block-end: 10px;
     gap: 10px;
 }
 
-@media (width >= 768px) {
-
+@media (min-width: 768px) {
     .item-heading-pictures {
         margin-block-end: 20px;
     }
