--- a/styles/dark.css
+++ b/styles/dark.css
@@ -10,10 +10,25 @@
       --main-text-color: #f1b2ce;
       --hyperlink-outline: #f1b2ce;
       --decoration-color: #ff0070;
+      --page-image: url("../images/cover-image-dark.png");
   }
+  .page.theme_light {
+    --title-color: #ffc2e6;
+    --background-color: #fff1f7;
+    --navigagtion-text-color: #353430;
+    --nav-outline: rgba(53, 52, 48, 0.4);
+    --accent-color: #ff8dcb;
+    --accent-text-color: #353430;
+    --subtitle-color: #353430;
+    --main-text-color: #353430;
+    --hyperlink-outline: #353430;
+    --decoration-color: #353430;
+    --page-image: url("../images/cover-image-light.png");
 }
 
-.page.theme_dark {
+}
+
+ .page.theme_dark {
   --title-color: #db00ff;
   --background-color: #000028;
   --navigagtion-text-color: #ff0070;
@@ -30,7 +45,17 @@
 display: inline-block;
   }
 
+
+
 .page.theme_dark .header__theme-menu {
   grid-row-start: 1;
 }
+
+
+
+
+
+
+
+
 
