--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,30 +1,15 @@
-@media (prefers-color-scheme: dark) {
-  :root {
-      --title-color: #db00ff;
-      --background-color: #000028;
-      --navigagtion-text-color: #ff0070;
-      --nav-outline: rgba(255, 0, 112, 0.4);
-      --accent-color: #ff0070;
-      --accent-text-color: #000028;
-      --subtitle-color: #ff0070;
-      --main-text-color: #f1b2ce;
-      --hyperlink-outline: #f1b2ce;
-      --decoration-color: #ff0070;
-      --page-image: url("../images/cover-image-dark.png");
-  }
-  .page.theme_light {
-      --title-color: #ffc2e6;
-      --background-color: #fff1f7;
-      --navigagtion-text-color: #353430;
-      --nav-outline: rgba(53, 52, 48, 0.4);
-      --accent-color: #ff8dcb;
-      --accent-text-color: #353430;
-      --subtitle-color: #353430;
-      --main-text-color: #353430;
-      --hyperlink-outline: #353430;
-      --decoration-color: #353430;
-      --page-image: url("../images/cover-image-light.png");
-  }
+:root {
+  --title-color: #db00ff;
+  --background-color: #000028;
+  --navigagtion-text-color: #ff0070;
+  --nav-outline: rgba(255, 0, 112, 0.4);
+  --accent-color: #ff0070;
+  --accent-text-color: #000028;
+  --subtitle-color: #ff0070;
+  --main-text-color: #f1b2ce;
+  --hyperlink-outline: #f1b2ce;
+  --decoration-color: #ff0070;
+  --page-image: url("../images/cover-image-dark.png");
 }
 
 .page.theme_dark {
@@ -38,6 +23,26 @@
   --main-text-color: #f1b2ce;
   --decoration-color: #ff0070;
   --page-image: url("../images/cover-image-dark.png");
+}
+
+@media (prefers-color-scheme: dark) {
+  .page.theme_auto {
+      --title-color: #db00ff;
+      --background-color: #000028;
+      --navigagtion-text-color: #ff0070;
+      --nav-outline: rgba(255, 0, 112, 0.4);
+      --accent-color: #ff0070;
+      --accent-text-color: #000028;
+      --subtitle-color: #ff0070;
+      --main-text-color: #f1b2ce;
+      --hyperlink-outline: #f1b2ce;
+      --decoration-color: #ff0070;
+      --page-image: url("../images/cover-image-dark.png");
+  }
+
+  .page.theme_auto .icon-text {
+      display: inline-block;
+  }
 }
 
 .page.theme_dark .icon-text {
