--- a/styles/light.css
+++ b/styles/light.css
@@ -1,25 +1,15 @@
-@media (prefers-color-scheme: light) {
-  .page {
-      --title-color: #ffc2e6;
-      --background-color: #fff1f7;
-      --navigagtion-text-color: #353430;
-      --nav-outline: rgba(53, 52, 48, 0.4);
-      --accent-color: #ff8dcb;
-      --accent-text-color: #353430;
-      --subtitle-color: #353430;
-      --main-text-color: #353430;
-      --hyperlink-outline: #353430;
-      --decoration-color: #353430;
-      --page-image: url("../images/cover-image-light.png");
-  }
-
-  .icon-text {
-      display: none;
-  }
-
-  .page.theme-auto.icon-text {
-      display: none;
-  }
+:root {
+  --title-color: #ffc2e6;
+  --background-color: #fff1f7;
+  --navigagtion-text-color: #353430;
+  --nav-outline: rgba(53, 52, 48, 0.4);
+  --accent-color: #ff8dcb;
+  --accent-text-color: #353430;
+  --subtitle-color: #353430;
+  --main-text-color: #353430;
+  --hyperlink-outline: #353430;
+  --decoration-color: #353430;
+  --page-image: url("../images/cover-image-light.png");
 }
 
 .page.theme-light {
@@ -34,6 +24,26 @@
   --page-image: url("../images/cover-image-light.png");
   --hyperlink-outline: #353430;
   --decoration-color: #353430;
+}
+
+@media (prefers-color-scheme: light) {
+  .page.theme-auto {
+      --title-color: #ffc2e6;
+      --background-color: #fff1f7;
+      --navigagtion-text-color: #353430;
+      --nav-outline: rgba(53, 52, 48, 0.4);
+      --accent-color: #ff8dcb;
+      --accent-text-color: #353430;
+      --subtitle-color: #353430;
+      --main-text-color: #353430;
+      --hyperlink-outline: #353430;
+      --decoration-color: #353430;
+      --page-image: url("../images/cover-image-light.png");
+  }
+
+  .page.theme_auto .icon-text {
+      display: none;
+  }
 }
 
 .page.theme_light .icon-text {
