--- a/styles/dark.css
+++ b/styles/dark.css
@@ -15,8 +15,9 @@
 } 
 
 @media (prefers-color-scheme: dark) {
-  .page.theme_dark,
+  
  .page.theme_auto,
+ .page.theme_dark,
  :root {
       --title-color: #db00ff;
       --background-color: #000028;
@@ -31,8 +32,8 @@
       --page-image: url("../images/cover-image-dark.png");
   }
 
-  .page.theme_auto .icon-text {
-      display: inline-block;
+  .page.theme_dark .icon-text {
+    display: inline-block;
   }
 }
 
