--- a/styles/light.css
+++ b/styles/light.css
@@ -1,4 +1,4 @@
-.page.theme-light,
+.page.theme_light,
 :root {
   --title-color: #ffc2e6;
   --background-color: #fff1f7;
@@ -14,7 +14,7 @@
 }
 
 @media (prefers-color-scheme: light) {
-  .page.theme-light,
+
 .page.theme-auto,
 :root {
       --title-color: #ffc2e6;
@@ -31,9 +31,11 @@
   }
 
   .page.theme_auto .icon-text {
-      display: none;
-  }
+    display: none;
 }
+}
+
+
 
 .page.theme_light .icon-text {
   display: none;
