--- a/styles/light.css
+++ b/styles/light.css
@@ -1,5 +1,4 @@
-.page.theme_light,
-:root {
+.page.theme-light {
   --title-color: #ffc2e6;
   --background-color: #fff1f7;
   --navigagtion-text-color: #353430;
@@ -13,10 +12,9 @@
   --page-image: url("../images/cover-image-light.png");
 }
 
-@media (prefers-color-scheme: light) {
 
-  .page.theme_auto,
-  .page.theme_light {
+@media (prefers-color-scheme: light) {
+  .page.theme_auto {
       --title-color: #ffc2e6;
       --background-color: #fff1f7;
       --navigagtion-text-color: #353430;
@@ -30,12 +28,12 @@
       --page-image: url("../images/cover-image-light.png");
   }
 
-  .page.theme_auto .icon-text {
-    display: none;
-}
 }
 
 
+.page.theme_auto .icon-text {
+  display: none;
+}
 
 .page.theme_light .icon-text {
   display: none;
