--- a/styles/light.css
+++ b/styles/light.css
@@ -15,6 +15,7 @@
 
 
 @media (prefers-color-scheme: light) {
+  .page.theme-light,
   .page.theme_auto,
   :root {
       --title-color: #ffc2e6;
@@ -30,10 +31,9 @@
       --page-image: url("../images/cover-image-light.png");
   }
 
-  .page.theme_auto .icon-text {
-    display: none;
+   .page.theme_auto .icon-text {
+       display: none;
   }
-  
 
 }
 
