--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,5 +1,5 @@
 .page.theme_dark,
-:root {
+:root.theme_dark {
   --title-color: #db00ff;
   --background-color: #000028;
   --navigagtion-text-color: #ff0070;
