--- a/styles/light.css
+++ b/styles/light.css
@@ -17,7 +17,7 @@
 @media (prefers-color-scheme: light) {
   .page.theme-light,
   .page.theme_auto,
-  :root {
+  :root.theme_auto {
       --title-color: #ffc2e6;
       --background-color: #fff1f7;
       --navigagtion-text-color: #353430;
