--- a/styles/dark.css
+++ b/styles/dark.css
@@ -28,12 +28,12 @@
   --page-image: url("../images/cover-image-dark.png");
 }
 
-.page.theme_auto .icon-text {
+:root.theme_auto .icon-text {
   display: inline-block;
 }
 }
 
-.page.theme_dark .icon-text {
+:root.theme_dark .icon-text {
   display: inline-block;
 }
 
