--- a/styles/dark.css
+++ b/styles/dark.css
@@ -14,7 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
 
-  :root {
+  :root.theme_dark,
+  :root.theme_auto  {
   --title-color: #db00ff;
   --background-color: #000028;
   --navigagtion-text-color: #ff0070;
@@ -28,7 +29,8 @@
   --page-image: url("../images/cover-image-dark.png");
 }
 
-:root.theme_auto .icon-text {
+:root.theme_dark,
+:root.theme_auto {
   display: inline-block;
 }
 }
