--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,4 +1,4 @@
-
+.page.theme_dark,
 :root.theme_dark {
   --title-color: #db00ff;
   --background-color: #000028;
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
 
-
+  .page.theme_auto,
   :root.theme_auto  {
   --title-color: #db00ff;
   --background-color: #000028;
@@ -29,18 +29,12 @@
   --page-image: url("../images/cover-image-dark.png");
 }
 
-
-
-:root.theme_auto {
+.icon-text{
   display: inline-block;
 }
 }
 
-.page.theme_dark .icon-text
-:root.theme_dark .icon-text {
-  display: inline-block;
-}
 
-.page.theme_dark .header__theme-menu {
-  grid-row-start: 1;
+.page.theme_dark .icon-text {
+  display: inline-block;
 }
