--- a/styles/light.css
+++ b/styles/light.css
@@ -16,8 +16,7 @@
 
 @media (prefers-color-scheme: light) {
 
-  .page.theme_auto,
-  :root.theme_auto {
+  .page.theme_auto {
       --title-color: #ffc2e6;
       --background-color: #fff1f7;
       --navigagtion-text-color: #353430;
@@ -31,12 +30,13 @@
       --page-image: url("../images/cover-image-light.png");
   }
   
-  .icon-text {
+  .page.theme_auto .icon-text {
     display: none;
 }
 }
 
-.page.theme_light .icon-text {
+.page.theme_light .icon-text  {
   display: none;
 }
+
 
