--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,5 +1,5 @@
-.page.theme_dark,
-:root.theme_dark {
+.theme_dark,
+:root {
   --title-color: #db00ff;
   --background-color: #000028;
   --navigagtion-text-color: #ff0070;
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
 
-  .page.theme_auto {
+.theme_auto {
   --title-color: #db00ff;
   --background-color: #000028;
   --navigagtion-text-color: #ff0070;
@@ -28,12 +28,12 @@
   --page-image: url("../images/cover-image-dark.png");
  }
 
-.page.theme_auto .icon-text {
+.theme_auto .icon-text {
   display: inline-block;
 }
 }
 
 
-.page.theme_dark .icon-text {
+.theme_dark .icon-text {
   display: inline-block;
 }
