--- a/styles/light.css
+++ b/styles/light.css
@@ -1,5 +1,5 @@
-.page.theme_light,
-:root.theme_light {
+.theme_light,
+:root {
   --title-color: #ffc2e6;
   --background-color: #fff1f7;
   --navigagtion-text-color: #353430;
@@ -16,7 +16,7 @@
 
 @media (prefers-color-scheme: light) {
 
-  .page.theme_auto {
+.theme_auto {
       --title-color: #ffc2e6;
       --background-color: #fff1f7;
       --navigagtion-text-color: #353430;
@@ -30,12 +30,12 @@
       --page-image: url("../images/cover-image-light.png");
   }
   
-  .page.theme_auto .icon-text {
+ .theme_auto .icon-text {
     display: none;
 }
 }
 
-.page.theme_light .icon-text {
+.theme_light .icon-text {
   display: none;
 }
 
