--- a/styles/style.css
+++ b/styles/style.css
@@ -200,7 +200,6 @@ button {
 }
 
 
-
 .header__theme-menu-button:hover {
     outline: 1px solid var(--nav-outline);
 }
@@ -217,6 +216,10 @@ button {
     pointer-events: none;
     outline: 1px solid var(--navigagtion-text-color);
 }
+
+/*.header__theme-menu-button_active.header__theme-menu-button_type_light {
+    pointer-events: none;
+}*/
 
 .header__theme-menu-item {
     color: var(--navigagtion-text-color);
