--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,5 +1,4 @@
-.theme_dark,
-:root {
+:root .theme_dark   {
   --title-color: #db00ff;
   --background-color: #000028;
   --navigagtion-text-color: #ff0070;
@@ -14,7 +13,8 @@
 
 @media (prefers-color-scheme: dark) {
 
-.theme_auto {
+ .theme_auto,
+ .theme_dark  {
   --title-color: #db00ff;
   --background-color: #000028;
   --navigagtion-text-color: #ff0070;
@@ -28,7 +28,8 @@
   --page-image: url("../images/cover-image-dark.png");
  }
 
-.theme_auto .icon-text {
+ .theme_auto .icon-text,
+ .theme_dark .icon-text {
   display: inline-block;
 }
 }
