--- a/styles/light.css
+++ b/styles/light.css
@@ -1,5 +1,4 @@
-.theme_light,
-:root {
+:root .theme_light {
   --title-color: #ffc2e6;
   --background-color: #fff1f7;
   --navigagtion-text-color: #353430;
@@ -16,7 +15,8 @@
 
 @media (prefers-color-scheme: light) {
 
-.theme_auto {
+.theme_auto,
+.theme_light {
       --title-color: #ffc2e6;
       --background-color: #fff1f7;
       --navigagtion-text-color: #353430;
@@ -29,8 +29,9 @@
       --decoration-color: #353430;
       --page-image: url("../images/cover-image-light.png");
   }
-  
- .theme_auto .icon-text {
+
+.theme_light .icon-text,
+.theme_auto .icon-text {
     display: none;
 }
 }
