--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,4 +1,5 @@
-:root.theme_dark   {
+:root.theme_dark,
+.page.theme_dark   {
   --title-color: #db00ff;
   --background-color: #000028;
   --navigagtion-text-color: #ff0070;
@@ -33,7 +34,6 @@
 }
 }
 
-
-.icon-text {
+.page.theme_dark .icon-text {
   display: inline-block;
 }
