--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,21 +1,6 @@
-:root.theme_dark,
-.page.theme_dark   {
-  --title-color: #db00ff;
-  --background-color: #000028;
-  --navigagtion-text-color: #ff0070;
-  --nav-outline: rgba(255, 0, 112, 0.4);
-  --accent-color: #ff0070;
-  --accent-text-color: #000028;
-  --subtitle-color: #ff0070;
-  --main-text-color: #f1b2ce;
-  --decoration-color: #ff0070;
-  --page-image: url("../images/cover-image-dark.png");
-}
 
 @media (prefers-color-scheme: dark) {
-
- .theme_auto,
- .theme_dark  {
+:root  {
   --title-color: #db00ff;
   --background-color: #000028;
   --navigagtion-text-color: #ff0070;
@@ -29,10 +14,24 @@
   --page-image: url("../images/cover-image-dark.png");
  }
 
- .theme_auto .icon-text {
+ .icon-text {
   display: inline-block;
 }
 }
+
+.page.theme_dark   {
+  --title-color: #db00ff;
+  --background-color: #000028;
+  --navigagtion-text-color: #ff0070;
+  --nav-outline: rgba(255, 0, 112, 0.4);
+  --accent-color: #ff0070;
+  --accent-text-color: #000028;
+  --subtitle-color: #ff0070;
+  --main-text-color: #f1b2ce;
+  --decoration-color: #ff0070;
+  --page-image: url("../images/cover-image-dark.png");
+}
+
 
 .page.theme_dark .icon-text {
   display: inline-block;
