--- a/styles/light.css
+++ b/styles/light.css
@@ -1,4 +1,22 @@
-:root.theme_light,
+
+@media (prefers-color-scheme: light) {
+:root {
+      --title-color: #ffc2e6;
+      --background-color: #fff1f7;
+      --navigagtion-text-color: #353430;
+      --nav-outline: rgba(53, 52, 48, 0.4);
+      --accent-color: #ff8dcb;
+      --accent-text-color: #353430;
+      --subtitle-color: #353430;
+      --main-text-color: #353430;
+      --hyperlink-outline: #353430;
+      --decoration-color: #353430;
+      --page-image: url("../images/cover-image-light.png");
+  }
+.icon-text {
+    display: none;
+}
+
 .page.theme_light  {
   --title-color: #ffc2e6;
   --background-color: #fff1f7;
@@ -13,31 +31,9 @@
   --decoration-color: #353430;
 }
 
-
-@media (prefers-color-scheme: light) {
-
-.theme_auto,
-.theme_light {
-      --title-color: #ffc2e6;
-      --background-color: #fff1f7;
-      --navigagtion-text-color: #353430;
-      --nav-outline: rgba(53, 52, 48, 0.4);
-      --accent-color: #ff8dcb;
-      --accent-text-color: #353430;
-      --subtitle-color: #353430;
-      --main-text-color: #353430;
-      --hyperlink-outline: #353430;
-      --decoration-color: #353430;
-      --page-image: url("../images/cover-image-light.png");
-  }
-
-
-.theme_auto .icon-text {
-    display: none;
-}
 }
 
- .icon-text {
+.page.theme_light .icon-text {
   display: none;
 }
 
