--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,18 @@
+:root {
+    color-scheme: light dark ;
+    --title-color: #ffc2e6;
+    --background-color: #fff1f7;
+    --navigagtion-text-color: #353430;
+    --nav-outline: rgba(53, 52, 48, 0.4);
+    --accent-color: #ff8dcb;
+    --accent-text-color: #353430;
+    --subtitle-color: #353430;
+    --main-text-color: #353430;
+    --page-image: url("../images/cover-image-light.png");
+    --hyperlink-outline: #353430;
+    --decoration-color: #353430;
+  }
+
 body,
 html {
     display: flex;
